fixing navbar issue on mobile

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -109,7 +109,7 @@
     }
 
     .links-long {
-        margin-top: -400px;
+        margin-top: 100px;
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
